<resources>
    <string name="app_name">Caminandog</string>
    <string name="title_activity_main" translatable="false">Principal</string>
    <string name="api_key_main" translatable="false">Vs9pJXSNx5fpSVloa6MQlatrf0s2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_lector_" translatable="false">Lector_Activity</string>
    <string name="title_activity_ayuda_actitvity" translatable="false">AyudaActitvity</string>
    <string name="facebook_application_id" translatable="false">263543227620225</string>
    <string name="facebook_login_protocol_scheme" translatable="false">263543227620225</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="minimum_password" translatable="false">Contraseña muy corta, ingresa minimo 6 caracterés!</string>
    <string name="auth_failed" translatable="false">Algo falló, revisa tu email o contraseña de lo contrario Registrate</string>
    <string name="change_email" translatable="false">Change Email</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="send_password_reset_email" translatable="false">Send Password reset email</string>
    <string name="remove_user" translatable="false">Remove user</string>
    <string name="new_pass" translatable="false">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password2">Repite contraseña</string>
    <string name="hint_name" translatable="false">Fullname</string>
    <string name="btn_login">Ingresar</string>
    <string name="prompt_password">Ingresa tu contraseña</string>
    <string name="btn_link_to_register">¿Aun no estas registrado? Registrate aqui!</string>
    <string name="btn_link_to_login">¿Ya estas registrado? Ingresa!</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="btn_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Restablecer Contraseña</string>
    <string name="btn_back">atras</string>
    <string name="hint_new_email" translatable="false">New Email</string>
    <string name="btn_change" translatable="false">Change</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="btn_remove" translatable="false">Remove</string>
    <string name="btn_sign_out" translatable="false">Sign Out</string>
    <string name="lbl_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Ingresa tu email para enviarte las instrucciones de restableciemiento.</string>
    <string name="email_id" translatable="false">Email ID</string>
    <string name="title_activity_main2" translatable="false">Caminandog2</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="inicio_str">Inicio</string>
    <string name="perros_str">Perrhijos</string>
    <string name="paseadors_str">Paseadores</string>
    <string name="tarifas_str">Tarifas</string>
    <string name="romapets_str">Aliados</string>
    <string name="mobica_str" translatable="false">pets by mobica</string>
    <string name="pasact_str">Paseos</string>
    <string name="paqact_str">Paquetes</string>
    <string name="acerca_str">Acerca De Caminandog</string>
    <string name="terminos_str">Contáctanos</string>
    <string name="pago_str">Tarjetas</string>
    <string name="codigos_str">Codigos</string>
    <string name="recuperandog_str">Recuperandog</string>
    <string-array name="edad">
        <item>6 meses</item>
        <item>8 meses</item>
        <item>12 meses</item>
        <item>18 meses</item>
        <item>2 años</item>
        <item>3 años</item>
        <item>4 años</item>
        <item>5 años</item>
        <item>6 años</item>
        <item>7 años</item>
        <item>8 años</item>
        <item>9 años</item>
        <item>10 años</item>
        <item>11 años</item>
        <item>12 años</item>
        <item>13 años</item>
        <item>14 años</item>
        <item>15 años</item>
        <item>16 años</item>
    </string-array>
    <string-array name="comportamiento">
        <item>Ansioso</item>
        <item>Tranquilo</item>
        <item>Agresivo</item>
    </string-array>
    <string-array name="padecimiento">
        <item>Alergias</item>
        <item>Cancer</item>
        <item>Hepatitis virica</item>
        <item>Mastitis</item>
        <item>Moquillo</item>
        <item>Ostitis</item>
        <item>Parasitos intestinales</item>
        <item>Parvovirus</item>
        <item>Piometra</item>
        <item>Torsion gastrica</item>
        <item>Ninguno</item>
    </string-array>
    <string name="raza">Raza</string>
    <string name="agregar">Agregar</string>
    <string name="finalizar">Finalizar</string>
    <string name="add_card">Agregar Nueva Tarjeta</string>
    <string name="checkout">Generar</string>
    <string name="sessionId">DeviceId: </string>
    <string name="getSessionId">Generar DeviceId</string>
    <string name="card">Tarjeta</string>
    <string name="token">Token</string>
    <string name="card_created">Tarjeta registrada correctamente</string>
    <string name="button_save">Guardar</string>
    <string name="holder_name">Titular</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="cvv" translatable="false">CVV2</string>
    <string name="info">Información</string>
    <string name="error">Error</string>
    <string name="card_added">Tarjeta Registrada</string>
    <string name="invalid_card_number">Número inválido</string>
    <string name="invalid_holder_name">Titular es requerido</string>
    <string name="invalid_cvv">Código de seguridad inválido</string>
    <string name="invalid_expire_date">Fecha de expiracion inválida</string>
    <string name="progress_message">Procesando...</string>
    <string name="declined">La tarjeta fue rechazada</string>
    <string name="expired">La tarjeta ha expirado</string>
    <string name="insufficient_funds">La tarjeta no tiene fondos suficientes</string>
    <string name="stolen_card">La tarjeta ha sido identificada como una tarjeta robada</string>
    <string name="suspected_fraud">La tarjeta ha sido identificada como una tarjeta fraudulenta.</string>
    <string name="communication_error">No se puede establecer comunicacion con el servidor</string>
    <string name="already_exists">La tarjeta ya se encuentra registrada</string>
    <string name="error_creating_card">Ocurrio un error al regitrar la tarjeta</string>
    <string name="prompt">Horas</string>
    <string-array name="dias">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="Nombre">Nombre</string>
    <string name="Telefono">Telefono</string>
    <string name="CANCELAR">Cancelar</string>
    <string name="Guardar">Guardar</string>
    <string name="Selecciona_las_fechas_que_deseas_agendar">Selecciona las fechas que deseas agendar</string>
    <string name="Paseos">Paseos</string>
    <string name="PASEOS">3 Paseos</string>
    <string name="PASEOSS">5 Paseos</string>
    <string name="PASEOSSS">10 Paseos</string>
    <string name="Calendario">Calendario</string>
    <string name="Agenda">Agenda</string>
    <string name="Continuar">Continuar</string>
    <string name="Cuentanos_mas_sobre_ti">Cuéntanos más sobre ti</string>
    <string name="Apellido">Apellido</string>
    <string name="Email">Email</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Deseas_eliminar_la_cedula">¿Deseas eliminar la cedula?</string>
</resources>