<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout2"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/dialog_rounded"
android:layout_alignParentBottom="true"
android:layout_alignParentTop="true">

<LinearLayout
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:id="@+id/linearLayout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"


        >

        <Button
            android:id="@+id/cancel_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_gravity="left"
            android:background="@android:color/transparent"


            />

        <TextView
            android:paddingTop="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:text=""
            />

        <Button
            android:id="@+id/guardarReg"
            android:textColor="@color/azul_texto_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_gravity="right"
            android:text="@string/Guardar"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@android:color/transparent"


            />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_caminandog"
        android:textSize="0.01sp" />

    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/Cuentanos_mas_sobre_ti"
        />












    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >



        <EditText
            android:id="@+id/txt_c_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:inputType="text"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/txt_c_apMat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Apellido"
            android:inputType="text"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/txt_c_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="text"/>



        <EditText
            android:id="@+id/txt_c_tel"
            android:maxLength="10"
            android:hint="@string/Telefono"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="phone"/>


    </LinearLayout>











</LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>
