<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_xy">



    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView62"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/Selecciona_las_fechas_que_deseas_agendar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/separator"
            android:textSize="0.1sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:shadowColor="@color/white"
                android:text="@string/Paseos"
                android:textAllCaps="false"
                android:textColor="@color/azul_caminandog"
                android:textSize="13sp" />

            <Button
                android:id="@+id/tres_dias"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:shadowColor="@color/white"
                android:text="@string/PASEOS"
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cinco_dias"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:shadowColor="@color/white"
                android:text="@string/PASEOSS"
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/diez_dias"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:shadowColor="@color/white"
                android:text="@string/PASEOSSS"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/separator"
            android:textSize="0.1sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="@color/white"
            android:text="@string/Calendario"
            android:textAllCaps="false"
            android:textColor="@color/azul_caminandog"
            android:textSize="13sp" />


        <com.squareup.timessquare.CalendarPickerView
            android:id="@+id/calendarView2"
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:drawSelectorOnTop="true"
            android:scrollIndicators="start|end"
            android:scrollbars="vertical"

            app:tsquare_dividerColor="@color/separator"
            app:tsquare_headerTextColor="@color/azul_caminandog"
            app:tsquare_titleTextColor="@color/azul_caminandog">

        </com.squareup.timessquare.CalendarPickerView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/separator"
            android:textSize="0.1sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="@color/white"
            android:text="@string/Agenda"
            android:textAllCaps="false"
            android:textColor="@color/azul_caminandog"
            android:textSize="13sp" />


        <ListView
            android:id="@+id/list2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.40"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/CANCELAR"
                android:textColor="@color/black" />

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.10" />

            <Button
                android:id="@+id/button_send2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.40"
                android:background="@drawable/rounded_button"
                android:text="@string/Continuar"
                android:textColor="@color/white" />


        </LinearLayout>




    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_dialog_agenda"
        style="?android:attr/progressBarStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/azul_caminandog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>